--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -582,6 +582,8 @@
         font-weight: 500;
         line-height: 28px; 
         color: $black;
+        display: block;
+        text-align: center;
         @include transition;
         &:hover{
           background-color: $black;
